# Alex_OKeefe_Fall22

./: .gitignore  CMakeLists.txt  Game39541.sln  README.md  Unique.txt
Game39541/: CMakeLists.txt  Game39541.cpp  Game39541.vcxproj  Game39541.vcxproj.filters
Game39541/Assets/Shaders/: defaultLizkitVertex.glsl
Lizkit/: CMakeLists.txt  Counter.h  Event.cpp  Event.h  Keys.h  Lizkit.h  Lizkit.vcxproj  Lizkit.vcxproj.filters  LizkitApp.cpp  LizkitApp.h  LizkitUtil.h  LizkitWindow.cpp  LizkitWindow.h  Picture.cpp  Picture.h  PictureImplement.h  Renderer.cpp  Renderer.h  RendererImplement.h  Shader.cpp  Shader.h  ShaderImplement.h  Unit.cpp  Unit.h  WindowImplement.h
Lizkit/GLFWcode/: GLFWimplement.cpp  GLFWimplement.h
Lizkit/OpenGLCode/: OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
